# nam-runpod-trainer

./: .gitignore  LICENSE  README.md  nam_runpod_job.py  pyproject.toml
configs/: amp-only.example.json  example.json
nam_pod/: status.py  train.py
pod/: checkpoints.py  setup.sh  status.py  train.py
scripts/: setup_pod.sh
src/nam_runpod/: __init__.py  __main__.py  config.py  git_helpers.py  orchestrator.py  runpod_api.py  ssh.py
tests/: conftest.py  test_config.py  test_git_helpers.py  test_runpod_api.py  test_train.py  test_unit.py
