[project]
name = "nam-runpod-trainer"
version = "0.2.0"
description = "Train Neural Amp Modeler captures on disposable RunPod pods."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
nam-train = "nam_runpod.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nam_runpod"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
